# cbl

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  cbl.toml
cbl-compiler/: .gitignore  GETTING_STARTED.md  IMPLEMENTATION.md  Makefile  README.md  cbl.opam  dune-project
cbl-compiler/examples/: traffic_basic.cbl
cbl-compiler/lib/: ast.ml  checker.ml  dune  json_emit.ml  lexer.mll  nlp_bridge.ml  nlp_bridge.mli  parser.mly  z3_guard_checker.ml
cbl-compiler/test/: dune  test_basic.ml  traffic.cbl
cbl-elicit/: __init__.py  __main__.py  config.py  llm.py  session.py
cbl-elicit/mitigations/: __init__.py  ast_nodes.py  back_translation.py  dual_extraction.py  mutation_testing.py  pattern_justification.py  provenance_control.py  traceability.py
cbl-elicit/prompts/: extract.txt  revise.txt  system.txt
cbl-elicit/schema/: extracted_facts.schema.json  verdict.schema.json
cbl-elicit/test/: test_e2e.py  test_llm_module.py  test_mitigations.py  test_traceability.py  test_z3_and_mutation.py  traffic_extracted.json
cbl-prolog/: bridge.pl  consistency.pl  provenance.pl  questions.pl  repair.pl  run.pl
cbl-prolog/test/: fdi_extracted.json  fdi_verdict.json
